--- a/lib/fresco_web/subdomain/page_html/home.html.heex
+++ b/lib/fresco_web/subdomain/page_html/home.html.heex
@@ -52,6 +52,7 @@
         v<%= Application.spec(:phoenix, :vsn) %>
       </small>
     </h1>
+    <h2>Welcome <%= @subdomain %></h2>
     <p class="text-[2rem] mt-4 font-semibold leading-10 tracking-tighter text-zinc-900">
       Peace of mind from prototype to production.
     </p>
